# ovirt-guest-agent

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  README_Fedora.txt  autogen.sh  configure.ac  ovirt-guest-agent-windows.spec  ovirt-guest-agent.rhel6.spec  ovirt-guest-agent.spec
GinaSSO/: GinaDlg.cpp  GinaDlg.h  GinaSSO.Def  GinaSSO.cpp  GinaSSO.h  GinaSSO.rc  GinaSSO.sln  GinaSSO.vcproj  Makefile.am  ReadMe.txt  afxres.h  resource.h  stdafx.cpp  stdafx.h
automation/: build-artifacts.packages  build-artifacts.packages.el6  build-artifacts.packages.el7  build-artifacts.repos  build-artifacts.repos.el7  build-artifacts.sh  check-patch.packages  check-patch.packages.el6  check-patch.repos  check-patch.repos.el7  check-patch.sh
configurations/: Makefile.am  default-logger.conf  default-logger.ini  default.conf  default.ini  ovirt-guest-agent.conf  ovirt-guest-agent.ini
debian/: README.source  changelog  control  copyright  docs  files  ovirt-guest-agent.upstart  postinst  postrm  preinst  rules
gdm-plugin/: Makefile.am  autogen.sh  gdm-ovirtcred-extension.c  gdm-ovirtcred-extension.h  gdm-ovirtcred.pam  test-login.py
gdm-plugin-ovirtcred/: build-gdm.sh  gdm-rhevcred-extension.h  page.ui  plugin.c
gdm-plugin-ovirtcred/icons/16x16/: Makefile.am
gdm-plugin/icons/16x16/: Makefile.am
gdm-plugin/icons/48x48/: Makefile.am
gdm2-plugin/: Makefile.am  gdm-ovirtcred-extension.c  gdm-ovirtcred-extension.h  gdm2-Makefile.am  plugin.c
hooks/: 55-flush-caches.consolehelper  55-flush-caches.sudo  Makefile.am  flush-caches
kdm-plugin/: Makefile.am  credentials.xml  kdm-ovirtcred.pam
kdm-plugin-ovirtcred/src/: RhevCred.h  kgreet_rhevcred.cpp
kdm-plugin/src/: CMakeLists.txt  OVirtCred.cpp  OVirtCred.h  kgreet_ovirtcred.cpp  kgreet_ovirtcred.h  kgreet_rhevcred.h
m4/: fhs.m4
ovirt-guest-agent/: CredServer.py  GuestAgentLinux2.py  GuestAgentWin32.py  IPHelper.py  LockActiveSession.py  LogoutActiveUser.py  Makefile.am  Makefile.el5  OVirtAgentLogic.py  OVirtGuestService.py  README-windows.txt  VirtIoChannel.py  WinFile.py  bytesio.py  hibernate  hooks.py  org.ovirt.vdsm.Credentials.conf  ovirt-guest-agent  ovirt-guest-agent.conf  ovirt-guest-agent.el5.rules  ovirt-guest-agent.in  ovirt-guest-agent.ini  ovirt-guest-agent.py  ovirt-guest-agent.rules  ovirt-guest-agent.service  setup.py  timezone.py  utils.py  version.py  win-guest-agent-build-exe.bat
ovirt-guest-agent/consoleapps/: Makefile.am
ovirt-guest-agent/pam/: Makefile.am  ovirt-container-list  ovirt-shutdown
pam-ovirt-cred/: Makefile.am  cred_channel.c  pam_ovirt_cred.c  test.c
scripts/: Makefile.am  container-list  ovirt-osinfo  sudoers.ovirt-guest-agent
scripts/diskmapper/: Makefile.am  diskmapper.el5  diskmapper.libudev
scripts/wrappers/: Makefile.am  ovirt-container-list-wrapper.sh  ovirt-flush-caches-wrapper.sh  ovirt-hibernate-wrapper.sh  ovirt-locksession-wrapper.sh  ovirt-logout-wrapper.sh  ovirt-shutdown-wrapper.sh  ovirt-sudo-wrapper.sh
tests/: Makefile.am  encoding_test.py  guest_agent_test.py  message_validator.py  test_port.py  testrunner.py  unittest.bat
windows-credprov/: Helpers.cpp  Helpers.h  Makefile.am  OVirtCredProv.cpp  OVirtCredProv.h  OVirtCredProv.rc  OVirtCredProv.sln  OVirtCredProv.vcproj  OVirtCredentials.cpp  OVirtCredentials.h  OVirtProvider.h  Pch.h  README  credentialprovider.h  intsafe.h
