
EXTRA_DIST= \
    ovirt-guest-agent.ini \
    default.ini \
    default-logger.ini \
    $(NULL)

agentconfdir=$(sysconfdir)
dist_agentconf_DATA=ovirt-guest-agent.conf

agentdefaultconfdir=$(datadir)/ovirt-guest-agent
dist_agentdefaultconf_DATA=\
    default.conf \
    default-logger.conf \
    $(NULL)

