install-exec-hook:
	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)
	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)/scripts/hooks/defaults
	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)/scripts/hooks/before_migration
	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)/scripts/hooks/after_migration
	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)/scripts/hooks/before_hibernation
	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)/scripts/hooks/after_hibernation
	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovirt-guest-agent/hooks.d/before_migration
	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovirt-guest-agent/hooks.d/after_migration
	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovirt-guest-agent/hooks.d/before_hibernation
	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovirt-guest-agent/hooks.d/after_hibernation
